@@ -3,6 +3,7 @@ PHP 4                                                                      NEWS
 ?? ??? 2004, Version 4.3.9
 - Fixed a file-descriptor leak with phpinfo() and other 'special' URLs (Zeev)
 - Fixed bug #29599 (domxml_error segfaults another apache module). (Rob)
+- Fixed bug #29594 (Use PHP's own tmpfile() implementation). (Ilia)
 
 11 Aug 2004, Version 4.3.9RC1
 - Rewritten UNIX and Windows install help files. (Documentation Team)
